--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -145,9 +145,16 @@
     />
   </head>
   <body>
-    <div class="hello">
-      <img class="hello__logo" src="../assets/img/logo.svg" alt="WTF " />
-      <span class="hello__circles"></span>
-    </div>
+
+<div class="conteiner">
+
+  <div class="btn"><a href="#">Read more</a></div>
+  <div class="btn"><a href="#">Read more</a></div>
+  <div class="btn"><a href="#">Read more</a></div>
+
+</div>
+
+
+
   </body>
 </html>
